--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+:root{
+    /* stylelint-disable-next-line alpha-value-notation */
+    --vc-info-warning-background: hsl(var(--yellow-300-hsl)/0.1)
+}
+
 .vc-plugin-urbanSearch-notice {
     font-size: 14px !important;
-    background-color: var(--info-warning-background) !important;
-    color: var(--info-warning-text) !important;
+    background-color: var(--vc-info-warning-background) !important;
+    color: var(--info-warning-foreground) !important;
     border: 1px solid var(--info-warning-foreground) !important;
     border-radius: 5px !important;
     font-weight: bold;
